--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "dev": "concurrently \"npm run backend\" \"npm run frontend\" "
   },
   "author": "krish && Meet",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.1",
+    "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4",
+    "module": "^1.2.5",
+    "mongoose": "^6.10.3",
     "nodemailer": "^6.9.1",
     "request": "^2.88.2",
     "router": "^1.3.7"
